--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,8 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Coder Manual Project Application 
+Subcription-based web application
+http://codermanual.com
 
 Things you may want to cover:
 
@@ -26,3 +27,6 @@ Things you may want to cover:
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
+
+Heroku link page.
+https://secret-mountain-79976.herokuapp.com/
